--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,4 @@
-:root {
+/* :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
@@ -65,4 +65,36 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;500&display=swap');
+
+@layer base{
+html{
+  font-family: Arial, Helvetica, sans-serif;
+  scroll-behavior:smooth;
+}
+}
+
+@layer components{
+  .menu-item{
+    /* @apply text-sm font-medium text-NavBlue cursor-pointer after:content-[''] after:w-full after:h -[3px] after:bg-NavBlue after:absolute after:left-0 after:-bottom-2 after:rounded after:-translate-x-11 after:opacity-0 after:transition-all after:hover:translate-x-0 after:hover:opacity-100; */
+    @apply text-sm font-medium text-NavBlue cursor-pointer after:content-[''] after:w-full after:h-3 after:bg-NavBlue after:absolute after:left-0 after:-bottom-2 after:rounded after:-translate-x-11 after:opacity-0 after:transition-all after:hover:translate-x-0 after:hover:opacity-100;
+  }
+
+}
+
+/* Extra CSS */
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  background: #dde6ed;
+  /* padding: 20px; */
 }
