--- a/client/src/index.css
+++ b/client/src/index.css
@@ -83,7 +83,7 @@ html{
 @layer components{
   .menu-item{
     /* @apply text-sm font-medium text-NavBlue cursor-pointer after:content-[''] after:w-full after:h -[3px] after:bg-NavBlue after:absolute after:left-0 after:-bottom-2 after:rounded after:-translate-x-11 after:opacity-0 after:transition-all after:hover:translate-x-0 after:hover:opacity-100; */
-    @apply text-sm font-medium text-NavBlue cursor-pointer after:content-[''] after:w-full after:h-3 after:bg-NavBlue after:absolute after:left-0 after:-bottom-2 after:rounded after:-translate-x-11 after:opacity-0 after:transition-all after:hover:translate-x-0 after:hover:opacity-100;
+    @apply text-sm font-medium text-NavBlue cursor-pointer after:content-['']  after:h-3 after:bg-NavBlue after:absolute after:left-0 after:-bottom-2 after:rounded after:-translate-x-11 after:opacity-0 after:transition-all after:hover:translate-x-0 after:hover:opacity-100;
   }
 
 }
